r314 (07. 03. 2025):
Converts Tracker: Fixed a possible crash after trading your convert and then going into custody a few seconds later
Added options "Berserker Text Format", "Persistent Continuous Armor Regen" and "Show Loot Waypoint"
Fixed synced trackers not appearing correctly when trackers are disabled
Moved all related Loot Counter code to shared class, so tracker and waypoint can use it
Reservoir Dogs Day 2: Fixed an issue with overlapping waypoints

r313 (01. 03. 2025):
Camera Loop: Fixed a crash related to waypoints

r312 (28. 02. 2025):
Added option "Show Buff Description"
Camera Loop: Fixed an issue where the tracker could spam log
Fixed an issue where bagable interactable loot is not properly colored based on their weight when interaction is enabled
Fixed an issue where hidden Poco Health Floats would be briefly visible after finishing a heist

r311 (24. 02. 2025):
Fixed another instance of trackers or waypoints not updating correctly
Menu: Fixed child options not correctly enabled if parent is enabled
Menu: Fixed trackers not updating visibility when "Show Trackers" option is switched

r310 (21. 02. 2025):
Fixed a crash in ECM Jammer

r309 (20. 02. 2025):
Fixed an issue where trackers and waypoints do not update correctly if mission trackers or waypoints are disabled

r308 (19. 02. 2025):
Fixed a crash in inaccurate trackers

r307 (18. 02. 2025):
Lost in Transit: Fixed a crash after interacting with the crane

r306 (17. 02. 2025):
Added option "Show Trackers"
Menu: Increased X and Y offsets from 1280 and 720 to 1920 and 1080 respectively
Removed option "Show Only Waypoints"; Waypoints no longer rely on their tracker counterpant and now they work on their own (disabling tracker will not affect waypoint)
Removed option "Show gained XP in Mission Briefing only"; Gained XP in Mission Briefing will work if XP tracker is disabled

r305 (14. 02. 2025):