@@ -1,7 +1,13 @@
+r315 (08. 03. 2025):
+Berserker Buff: Made buff more accurate
+Berserker Buff: Fixed melee damage showing weapon damage in multiplier format
+Loot Waypoint: Fixed a crash when waypoints are not defined
+Menu: Fixed issues with a controller
+
 r314 (07. 03. 2025):
 Converts Tracker: Fixed a possible crash after trading your convert and then going into custody a few seconds later
 Added options "Berserker Text Format", "Persistent Continuous Armor Regen" and "Show Loot Waypoint"
-Fixed synced trackers not appearing correctly when trackers are disabled
+Fixed synced mission trackers not appearing correctly when mission trackers are disabled and mission waypoints are enabled
 Moved all related Loot Counter code to shared class, so tracker and waypoint can use it
 Reservoir Dogs Day 2: Fixed an issue with overlapping waypoints
 
